src/dftbp/api/mm/dftbplus.h

/**
 * Type containing the DFTB+ calculator.
 *
 * Used by DFTB+ as an opaque handler. Do not manipulate the content of this type directly!
 */
typedef struct DftbPlus {
  void * pDftbPlus;
} DftbPlus;
/**
 * Queries the nr. of atoms in the system.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \return Nr. of atoms.
 */
int dftbp_get_nr_atoms(DftbPlus *instance);
/**
 * Queries the nr. of k-points in the system.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \return Nr. of k-points.
 */
int dftbp_nr_kpoints(DftbPlus *instance);
/**
 * Queries the energy of the current geometry.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] mermin_energy Mermin free energy of the current geometry. Unit: Bohr.
 */
void dftbp_get_energy(DftbPlus *instance, double *mermin_energy);
/**
 * Queries the gradients of the current geometry.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] gradients Gradients (not forces!) on each atom. Shape: [natom, 3]. Unit: Hartree/Bohr.
 */
void dftbp_get_gradients(DftbPlus *instance, double *gradients);
/**
 * Queries the number of basis functions for each atom in current geometry.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] nOrbitals Number of orbitals on each atom. Shape: [natom].
 */
void dftbp_get_nr_orbitals(DftbPlus *instance, int *nOrbitals);
/**
 * Queries the masses for each atom in current geometry.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] masses Mass of each atom. Shape: [natom].
 */
void dftbp_get_masses(DftbPlus *instance, double *masses);
/**
 * Queries the maximum cutoff distance used for interactions.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \return Cutoff distance Unit: Bohr.
 */
double dftbp_get_cutoff(DftbPlus *instance);
/**
 * Queries the stress tensor of the current periodic box.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] stresstensor Stress tensor for the periodic box. Shape: [3, 3]. Unit: Pascals.
 */
void dftbp_get_stress_tensor(DftbPlus *instance, double *stresstensor);
/**
 * Queries the net populations on the atoms.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] charges Net charges on each atom. Shape: [natom]. Sign convention: Electron has
 *     negative charge, so negative values indicate electron excess.
 */
void dftbp_get_gross_charges(DftbPlus *instance, double *charges);
/**
 * Queries the CM5 charges on the atoms.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] charges Net charges on each atom. Shape: [natom]. Sign convention: Electron has
 *     negative charge, so negative values indicate electron excess.
 */
void dftbp_get_cm5_charges(DftbPlus *instance, double *charges);
/**
 * Queries the reference valence charges of the atoms (effective Z).
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] charges reference charges on each atom. Shape: [natom].
 */
void dftbp_get_ref_charges(DftbPlus *instance, double *charges);
/**
 * Sets the reference valence charges of the atoms (effective Z).
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[in] charges reference charges on each atomic shell. Shape: [natom].
 */
void dftbp_set_ref_charges(DftbPlus *instance, double *charges);