src/dftbp/api/mm/capi.F90


    !> Distances to the neighbour atoms for an atom in the central cell
    real(c_double), intent(in) :: neighDist(nMaxNeighbours, *)

    !> Cutoff distance used for this neighbour list
    real(c_double), value, intent(in) :: cutOff

    !> Coordinates of all neighbours
    real(c_double), intent(in) :: coordNeighbours(3, *)

    !> Mapping between neighbour reference and atom index in the central cell
    integer(c_int), intent(in) :: neighbour2CentCell(*)

    type(TDftbPlusC), pointer :: instance
    integer :: nAtom

    call c_f_pointer(handler%instance, instance)
    nAtom = instance%nrOfAtoms()
    call instance%setNeighbourList(nNeighbour(1:nAtom), iNeighbour(:,1:nAtom),&
        & neighDist(:,1:nAtom), cutOff, coordNeighbours(:,1:nAllAtom),&
        & neighbour2CentCell(1:nAllAtom))

  end subroutine c_DftbPlus_setNeighbourList


  !> Obtain nr. of atoms.
  function c_DftbPlus_nrOfAtoms(handler) result(nAtom) bind(C, name='dftbp_get_nr_atoms')
    type(c_DftbPlus), intent(inout) :: handler
    integer(c_int) :: nAtom

    type(TDftbPlusC), pointer :: instance

    call c_f_pointer(handler%instance, instance)
    nAtom = instance%nrOfAtoms()

  end function c_DftbPlus_nrOfAtoms


  !> Obtain nr. of k-points.
  function c_DftbPlus_nrOfKPoints(handler) result(nKPoints) bind(C, name='dftbp_nr_kpoints')
    type(c_DftbPlus), intent(inout) :: handler
    integer(c_int) :: nKPoints

    type(TDftbPlusC), pointer :: instance

    call c_f_pointer(handler%instance, instance)
    nKPoints = instance%nrOfKPoints()

  end function c_DftbPlus_nrOfKPoints


  !> Obtain masses of atoms in the DFTB+ calculation.
  subroutine c_DftbPlus_get_atom_masses(handler, masses) bind(C, name='dftbp_get_masses')
    type(c_DftbPlus), intent(inout) :: handler
    real(c_double), intent(out) :: masses(*)

    type(TDftbPlusC), pointer :: instance
    integer :: nAtom

    call c_f_pointer(handler%instance, instance)
    nAtom = instance%nrOfAtoms()
    call instance%getAtomicMasses(masses(:nAtom))

  end subroutine c_DftbPlus_get_atom_masses


  !> Obtain nr. basis functions at each atoms in the DFTB+ calculation.
  subroutine c_DftbPlus_get_atom_nr_basis(handler, nOrbitals) bind(C, name='dftbp_get_nr_orbitals')
    type(c_DftbPlus), intent(inout) :: handler
    integer(c_int), intent(out) :: nOrbitals(*)

    type(TDftbPlusC), pointer :: instance
    integer :: nAtom

    call c_f_pointer(handler%instance, instance)
    nAtom = instance%nrOfAtoms()
    call instance%getNOrbitalsOnAtoms(nOrbitals(:nAtom))

  end subroutine c_DftbPlus_get_atom_nr_basis


  !> Retrieve the cutoff distance that is being used for interactions
  function c_DftbPlus_getCutOff(handler) result(cutOff) bind(C, name='dftbp_get_cutoff')

    !> Handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> Cutoff distance
    real(dp) :: cutOff

    type(TDftbPlusC), pointer :: instance

    call c_f_pointer(handler%instance, instance)
    cutOff = instance%getCutOff()

  end function c_DftbPlus_getCutOff


  !> Obtain the DFTB+ energy
  subroutine c_DftbPlus_getEnergy(handler, merminEnergy) bind(C, name='dftbp_get_energy')

    !> Handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> Resulting energy
    real(c_double), intent(out) :: merminEnergy

    type(TDftbPlusC), pointer :: instance

    call c_f_pointer(handler%instance, instance)
    call instance%getEnergy(merminEnergy)

  end subroutine c_DftbPlus_getEnergy


  !> Obtain the gradients wrt DFTB atom positions
  subroutine c_DftbPlus_getGradients(handler, gradients) bind(C, name='dftbp_get_gradients')

    !> Handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> Gradients, row major format
    real(c_double), intent(out) :: gradients(3, *)

    type(TDftbPlusC), pointer :: instance
    integer :: nAtom

    call c_f_pointer(handler%instance, instance)
    nAtom = instance%nrOfAtoms()
    call instance%getGradients(gradients(:, 1:nAtom))

  end subroutine c_DftbPlus_getGradients


  !> Obtain the stress tensor of the periodic system
  subroutine c_DftbPlus_getStressTensor(handler, stresstensor)&
      & bind(C, name='dftbp_get_stress_tensor')

    !> Handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> Gradients, row major format
    real(c_double), intent(out) :: stresstensor(3, 3)

    type(TDftbPlusC), pointer :: instance

    call c_f_pointer(handler%instance, instance)

    call instance%getStressTensor(stresstensor(:, 1:3))

  end subroutine c_DftbPlus_getStressTensor


  !> Obtain gross (Mulliken) charges for atoms wrt to neutral references
  subroutine c_DftbPlus_getGrossCharges(handler, atomCharges)&
      & bind(C, name='dftbp_get_gross_charges')

    !> Handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> Resulting atomic charges
    real(c_double), intent(out) :: atomCharges(*)

    type(TDftbPlusC), pointer :: instance
    integer :: nAtom

    call c_f_pointer(handler%instance, instance)
    nAtom = instance%nrOfAtoms()
    call instance%getGrossCharges(atomCharges(1:nAtom))

  end subroutine c_DftbPlus_getGrossCharges


  !> Obtain CM5 charges
  subroutine c_DftbPlus_getCM5Charges(handler, atomCharges)&
      & bind(C, name='dftbp_get_cm5_charges')

    !> Handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> Resulting atomic charges
    real(c_double), intent(out) :: atomCharges(*)

    !> f pointer of input arguments
    type(TDftbPlusC), pointer :: instance

    integer :: nAtom

    !> Translate c to f objects
    call c_f_pointer(handler%instance, instance)

    nAtom = instance%nrOfAtoms()
    call instance%getCM5Charges(atomCharges(1:nAtom))

  end subroutine c_DftbPlus_getCM5Charges


  !> Obtain reference atomic charge, the effective Z for the valence orbitals
  subroutine c_DftbPlus_getRefCharges(handler, refCharges)&
      & bind(C, name='dftbp_get_ref_charges')

    !> Handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> Resulting atomic reference charges
    real(c_double), intent(out) :: refCharges(*)

    !> f pointer of input arguments
    type(TDftbPlusC), pointer :: instance

    integer :: nAtom

    ! translate c to f objects
    call c_f_pointer(handler%instance, instance)

    nAtom = instance%nrOfAtoms()
    call instance%getRefCharges(refCharges(1:nAtom))

  end subroutine c_DftbPlus_getRefCharges


  !> Set reference atomic charge, the effective Z for the valence orbitals
  subroutine c_DftbPlus_setRefCharge(handler, refCharges)&
      & bind(C, name='dftbp_set_ref_charges')

    !> Handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> Provided atomic reference charges
    real(c_double), intent(in) :: refCharges(*)

    !> f pointer of input arguments
    type(TDftbPlusC), pointer :: instance

    integer :: nAtom

    ! translate c to f objects
    call c_f_pointer(handler%instance, instance)

    nAtom = instance%nrOfAtoms()
    call instance%setRefCharges(refCharges(1:nAtom))

  end subroutine c_DftbPlus_setRefCharge


  !> Finalizer for TDftbPlusC
  subroutine TDftbPlusC_final(this)

    !> Instance
    type(TDftbPlusC), intent(inout) :: this

    ! Note: Fortran finalizes all components of a child class instance (TDftbPlusC) first and only
    ! then the components of its parent (TDftbPlus). TDftbPlusC contains a descriptor connected to
    ! an open file, whose unit had been passed to and stored by TDftbPlus. When TDftbPlusC is
    ! finalized, the file is closed, so TDftbPlus will try to write the timings to an invalid unit
    ! when finalized aftewards. Therefore, we call TDftbPlus_destruct explicitely before
    ! finalization of TDftbPlusC happens.
    !
    call TDftbPlus_destruct(this%TDftbPlus)

  end subroutine TDftbPlusC_final


  !> Converts a 0-char terminated C-type string into a Fortran string.
  function fortranChar(cstring, maxlen)

    !> C-type string as array
    character(kind=c_char), intent(in) :: cstring(*)

    !> Maximal string length. If C-string is longer, it will be chopped.
    integer, intent(in), optional  :: maxlen

    !> Resulting Fortran string
    character(:, kind=c_char), allocatable :: fortranChar

    integer :: ii, maxlen0

    if (present(maxlen)) then
      maxlen0 = maxlen
    else
      maxlen0 = huge(maxlen0) - 1
    end if

    do ii = 1, maxlen0
      if (cstring(ii) == c_null_char) then
        exit
      end if
    end do
    allocate(character(ii - 1) :: fortranChar)
    fortranChar = transfer(cstring(1 : ii - 1), fortranChar)

  end function fortranChar


  ! Returns a unit for an opened output file.
  !
  ! If outputFileName is associated, a file with that name will be created (and returned), otherwise
  ! the output_unit is returned (and no file is created)
  !
  subroutine handleOutputFile_(outputFileName, outputFile)
    type(c_ptr), intent(in) :: outputFileName
    type(TFileDescr), intent(out) :: outputFile

    character(c_char), pointer :: pOutputFileName
    character(:), allocatable :: fortranFileName

    if (c_associated(outputFileName)) then
      call c_f_pointer(outputFileName, pOutputFileName)
      fortranFileName = fortranChar(pOutputFileName)
      call openFile(outputFile, fortranFileName, mode="w")
    else
      call outputFile%connectToUnit(output_unit)
    end if

  end subroutine handleOutputFile_


end module dftbp_capi
